--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,8 @@
   "name": "backend",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Roberto Langarica <roberto@wizardforyou.com>",
+  "repository":"https://github.com/RobertoLangarica/dynamic-documents.git",
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
