--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,37 +1,9 @@
-version: "3.8"
+version '3.7'
 
 services:
     api:
-        container_name: dd_back
-        image: registry.digitalocean.com/wizard/ddocuments/backend-dev
+        image: registry.digitalocean.com/wizard/ddocuments/backend:latest
         ports:
-            - "3000"
-        networks:
-            - dd_net
-        depends_on:
-            - db_server
-        env_file:
-            - .env
-    db_server:
-        container_name: db_server
-        # image: registry.digitalocean.com/wizard/postgres
-        image: postgres:12
-        ########
-        # When the DB is deployed in production the restart param should be --restart always
-        # When the DB is deployed locally the restart param could be --restart unless-stopped
-        ########
-        networks:
-            - dd_net
-        restart: unless-stopped   
-        environment:
-            PGDATA: /var/lib/postgresql/data/pgdata
-        ports:
-            - "5432"
-        volumes:
-            - postgres-data:/var/lib/postgresql/data
-        env_file:
-            - .env
-networks:
-    dd_net:
-volumes:
-    postgres-data:
+            - 3000:3000
+        restart: unless-stopped
+        
