--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "",
   "author": "Roberto Langarica <roberto@wizardforyou.com>",
-  "repository":"https://github.com/RobertoLangarica/dynamic-documents.git",
+  "repository": "https://github.com/RobertoLangarica/dynamic-documents.git",
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
@@ -13,10 +13,10 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "dev":"   docker run  --rm -p 3000:3000 --name dd_back --mount type=bind,source=$(pwd),target=/usr/src/app -v /usr/src/app/node_modules registry.digitalocean.com/wizard/ddocuments/backend-dev",
-    "debug":" docker run  --rm -p 3000:3000 --name dd_back --mount type=bind,source=$(pwd),target=/usr/src/app -v /usr/src/app/node_modules registry.digitalocean.com/wizard/ddocuments/backend-dev npm run start:debug",
-    "dev":"docker-compose up && docker-compose exec db_server /init_db.sh",
-    "stop":"docker rm $(docker stop dd_back)",
+    "bash": "./start_dev.sh -it /bin/sh",
+    "dev": "./start_dev.sh",
+    "debug": "./start_dev.sh npm run start:debug",
+    "stop": "docker rm $(docker stop dd_back)",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -28,7 +28,7 @@
     "migration:create": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config database/cli-config.ts migration:create -n ",
     "migrate:revert": "npm run typeorm migration:revert",
     "migrate:refresh": "npm run typeorm schema:drop && npm run migrate",
-    "start:db": "./database_docker/start_db.sh",
+    "start:db": "./start_db.sh -n dd_back_net",
     "stop:db": "docker rm $(docker stop db_server)"
   },
   "dependencies": {
@@ -42,6 +42,7 @@
     "bcrypt": "latest",
     "class-transformer": "latest",
     "class-validator": "latest",
+    "curl": "^0.1.4",
     "pg": "^7.18.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
@@ -51,7 +52,7 @@
     "typeorm": "^0.2.22"
   },
   "devDependencies": {
-    "@nestjs/cli": "^6.9.0",
+    "@nestjs/cli": "^6.14.2",
     "@nestjs/schematics": "^6.7.0",
     "@nestjs/testing": "^6.7.1",
     "@types/express": "^4.17.1",
