- Adding the capacity to run the release builds

--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -17,8 +17,9 @@ dist
 build_commands
 database_docker
 start_db.sh
-start_dev.sh
+start_image.sh
 docker-compose.yml
 **/docker-compose.yml
 Dockerfile
 **/Dockerfile
+temp
