--- a/backend/package.json
+++ b/backend/package.json
@@ -13,10 +13,12 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "bash": "./start_dev.sh -it /bin/sh",
-    "dev": "./start_dev.sh",
-    "debug": "./start_dev.sh npm run start:debug",
+    "bash": "./start_image.sh -it /bin/sh",
+    "dev": "./start_image.sh",
+    "debug": "./start_image.sh npm run start:debug",
+    "release": "./start_image.sh -r",
     "stop": "docker rm $(docker stop dd_back)",
+    "stop:release": "docker rm $(docker stop dynamicdocs_api)",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "test": "jest",
     "test:watch": "jest --watch",
