--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,7 @@
     "eslint-loader": "^2.1.1",
     "eslint-plugin-vue": "^5.0.0",
     "localStorage": "^1.0.4",
-    "quasar-app-extension-api-wrapper": "0.0.2",
+    "quasar-app-extension-api-wrapper": "^0.0.9",
     "quasar-app-extension-nequ-components": "^0.3.1",
     "quasar-app-extension-vuelidate-rules": "^0.2.0"
   },
