--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "dev": "quasar dev",
     "lint": "eslint --ext .js,.vue src",
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "echo \"No test specified\" && exit 0",
+    "build": "quasar build"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
