--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.1",
     "quasar": "^1.0.0",
+    "uuid": "^8.2.0",
     "vue-i18n": "^8.0.0"
   },
   "devDependencies": {
