--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -7,6 +7,7 @@ on:
       - staging_front
 jobs:
   build:
+    name: Frontend build and deploy
     runs-on: ubuntu-18.04
   - uses: actions/checkout@v2
     steps:
