--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     name: Frontend build and deploy
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
   - uses: actions/checkout@v2
     steps:
     - checkout
