--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -9,13 +9,12 @@ jobs:
   build:
     name: Frontend build and deploy
     runs-on: ubuntu-latest
-  - uses: actions/checkout@v2
     steps:
-    - checkout
-    - name: Instalando dependencias
-      run: ls
-      run: pwd
-      run: node -v
-      run: npm -v
-
-    
+      - name: Instalando dependencias
+      - uses: actions/checkout@v2
+      - run: |
+          pwd
+          git checkout
+          ls
+          node -v
+          npm -v
