--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -10,7 +10,7 @@ jobs:
     name: Frontend build and deploy
     runs-on: ubuntu-latest
     steps:
-      name: Instalando dependencias
+      - name: Instalando dependencias
       uses: actions/checkout@v2
       run: |
         pwd
