--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Getting latest version
         run: git checkout .
-        run: ls
+      - run: ls
       - id: Instalando dependencias
         run: |
           pwd
