--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Getting latest version
         run: git checkout .
       - run: ls
-      - id: Instalando dependencias
+      - id: Instalando-dependencias
         run: |
           pwd
           ls
