--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -12,8 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Getting latest version
         run: git checkout
-      - name: check folder
-        run: ls
+      - run: ls
       - name: Instalando dependencias
         run: |
           pwd
