--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -14,8 +14,9 @@ jobs:
         run: git checkout
       - run: ls
       - name: Instalando dependencias
-        run: |
-          cd dynamic-documents
-          npm install
+        run: npm install
       - name: Build
-        run: npm run build
+        run: |
+          npm run build
+          cd dist
+          ls
