--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -14,7 +14,9 @@ jobs:
         run: git checkout
       - run: ls
       - name: Instalando dependencias
-        run: npm install
+        run: |
+          cd frontend
+          npm install
       - name: Build
         run: |
           npm run build
