--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -19,6 +19,7 @@ jobs:
           npm install
       - name: Build
         run: |
+          cd frontend
           npm run build
           cd dist
           ls
