--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -13,7 +13,9 @@ jobs:
       - name: Getting latest version
         run: git checkout
       - name: Adding ssh
-        run: echo "${{secrets.DO_KEY}}" | ssh-add
+        run: |
+          eval `ssh-agent -s`
+          echo "${{secrets.DO_KEY}}" | ssh-add
       # - name: Instalando dependencias
       #   run: |
       #     cd frontend
