--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Starting ssh-agent
         run: eval `ssh-agent -s`
       - name: Adding ssh
-        run: echo "${{secrets.DO_KEY}}" | ssh-add
+        run: ssh-add - <<< "${{secrets.DO_KEY}}"
       # - name: Instalando dependencias
       #   run: |
       #     cd frontend
