--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -12,10 +12,12 @@ jobs:
       - uses: actions/checkout@v2
       - name: Getting latest version
         run: git checkout
-      - name: Starting ssh-agent
-        run: eval `ssh-agent -s`
+      # - name: Starting ssh-agent
+      #   run: eval `ssh-agent -s`
       - name: Adding ssh
-        run: ssh-add - <<< "${{secrets.DO_KEY}}"
+        run: |
+        eval `ssh-agent -s`
+        ssh-add - <<< "${{secrets.DO_KEY}}"
       # - name: Instalando dependencias
       #   run: |
       #     cd frontend
