--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -16,8 +16,8 @@ jobs:
       #   run: eval `ssh-agent -s`
       - name: Adding ssh
         run: |
-        eval `ssh-agent -s`
-        ssh-add - <<< "${{secrets.DO_KEY}}"
+          eval `ssh-agent`
+          ssh-add - <<< "${{secrets.DO_KEY}}"
       # - name: Instalando dependencias
       #   run: |
       #     cd frontend
