--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -15,6 +15,8 @@ jobs:
       # - name: Starting ssh-agent
       #   run: eval `ssh-agent -s`
       - name: Adding ssh
+        env:
+          SSH_ASKPASS: ${{secrets.DO_KEY_PASS}}
         run: |
           eval `ssh-agent`
           ssh-add - <<< "${{secrets.DO_KEY}}"
