--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -19,8 +19,8 @@ jobs:
           SSH_ASKPASS: ${{secrets.DO_KEY_PASS}}
         run: |
           eval `ssh-agent`
-          SSH_ASKPASS="${{secrets.DO_KEY_PASS}}"
-          ssh-add - <<< "${{secrets.DO_KEY}}"
+          
+          echo "${{secrets.DO_KEY_PASS}}" | ssh-add - <<< "${{secrets.DO_KEY}}"
       # - name: Instalando dependencias
       #   run: |
       #     cd frontend
