--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -19,7 +19,7 @@ jobs:
           eval `ssh-agent`
           ssh-add - <<< "${{secrets.DO_KEY}}"
           mkdir ~/.ssh
-          echo | ~/.ssh/known_hosts
+          echo > ~/.ssh/known_hosts
           ssh-keyscan 68.183.171.182 > ~/.ssh/known_hosts
       - name: Probando ssh 
         run: |
