--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -21,6 +21,8 @@ jobs:
           mkdir ~/.ssh
           echo > ~/.ssh/known_hosts
           ssh-keyscan 68.183.171.182 > ~/.ssh/known_hosts
+          ssh "$SERVER" \
+          "pwd"
       - name: Probando ssh 
         run: |
           echo $SERVER
