- Workflow to deply staging backend

--- a/.github/workflows/backend-staging-deploy.yml
+++ b/.github/workflows/backend-staging-deploy.yml
@@ -4,7 +4,7 @@ name: Frontend-STAGING deployment
 on:
   push:
     branches:
-      - staging_backend
+      - staging_back
 jobs:
   front_build:
     runs-on: ubuntu-latest
