--- a/.github/workflows/backend-staging-deploy.yml
+++ b/.github/workflows/backend-staging-deploy.yml
@@ -14,6 +14,7 @@ jobs:
     steps:
       - name: Getting latest version on the server
         run: echo $GITHUB_REF
+      - run: echo $GITHUB_EVENT_PATH
       # - name: Instalando dependencias
       #   run: |
       #     cd frontend
