--- a/backend/package.json
+++ b/backend/package.json
@@ -42,7 +42,7 @@
     "@nestjs/swagger": "^4.3.1",
     "@nestjs/typeorm": "^6.2.0",
     "aws-sdk": "^2.624.0",
-    "bcrypt": "latest",
+    "bcrypt": "^5.0.0",
     "class-transformer": "latest",
     "class-validator": "latest",
     "curl": "^0.1.4",
