--- a/.github/workflows/backend-staging-deploy.yml
+++ b/.github/workflows/backend-staging-deploy.yml
@@ -13,17 +13,17 @@ jobs:
       REMOTE_DIR: ~/dd/staging
       BRANCH: staging_back
     steps:
-      - uses: actions/checkout@v2
-      - name: Getting latest version
-        run: git checkout
-      - name: Instalando dependencias
-        run: |
-          cd backend
-          npm install
-      - name: Build
-        run: |
-          cd backend
-          npm run build
+      # - uses: actions/checkout@v2
+      # - name: Getting latest version
+      #   run: git checkout
+      # - name: Instalando dependencias
+      #   run: |
+      #     cd backend
+      #     npm install
+      # - name: Build
+      #   run: |
+      #     cd backend
+      #     npm run build
       - name: Adding SSH credentials
         run: |
           eval `ssh-agent`
@@ -36,10 +36,10 @@ jobs:
           ssh "$SERVER" \
           "cd "$REMOTE_DIR"/backend && \
           yes | rm -r dist"
-      - name: Sending new build to the server
-        run: |
-          cd backend
-          scp -r ./dist "$SERVER":"$REMOTE_DIR"/backend/dist
+      # - name: Sending new build to the server
+      #   run: |
+      #     cd backend
+      #     scp -r ./dist "$SERVER":"$REMOTE_DIR"/backend/dist
       # - name: Install dependencies on the backend
       #   run: |
       #     ssh "$SERVER" \
