--- a/.github/workflows/backend-staging-deploy.yml
+++ b/.github/workflows/backend-staging-deploy.yml
@@ -31,6 +31,8 @@ jobs:
           mkdir ~/.ssh
           echo > ~/.ssh/known_hosts
           ssh-keyscan 68.183.171.182 > ~/.ssh/known_hosts
+      - run: ssh-add -l
+      - run: ssh "$SERVER" "pwd"
       - name: Deleting last build on the server
         run: |
           ssh "$SERVER" \
