--- a/.github/workflows/backend-staging-deploy.yml
+++ b/.github/workflows/backend-staging-deploy.yml
@@ -13,17 +13,17 @@ jobs:
       REMOTE_DIR: ~/dd/staging
       BRANCH: staging_back
     steps:
-      # - uses: actions/checkout@v2
-      # - name: Getting latest version
-      #   run: git checkout
-      # - name: Instalando dependencias
-      #   run: |
-      #     cd backend
-      #     npm install
-      # - name: Build
-      #   run: |
-      #     cd backend
-      #     npm run build
+      - uses: actions/checkout@v2
+      - name: Getting latest version
+        run: git checkout
+      - name: Instalando dependencias
+        run: |
+          cd backend
+          npm install
+      - name: Build
+        run: |
+          cd backend
+          npm run build
       - name: Adding SSH credentials
         run: |
           eval `ssh-agent`
@@ -31,16 +31,25 @@ jobs:
           mkdir ~/.ssh
           echo > ~/.ssh/known_hosts
           ssh-keyscan 68.183.171.182 > ~/.ssh/known_hosts
-        run: ssh-add -l
       - name: Deleting last build on the server
         run: |
+          eval `ssh-agent`
+          ssh-add - <<< "${{secrets.DO_KEY}}"
+          mkdir ~/.ssh
+          echo > ~/.ssh/known_hosts
+          ssh-keyscan 68.183.171.182 > ~/.ssh/known_hosts
           ssh "$SERVER" \
           "cd "$REMOTE_DIR"/backend && \
           yes | rm -r dist"
-      # - name: Sending new build to the server
-      #   run: |
-      #     cd backend
-      #     scp -r ./dist "$SERVER":"$REMOTE_DIR"/backend/dist
+      - name: Sending new build to the server
+        run: |
+          eval `ssh-agent`
+          ssh-add - <<< "${{secrets.DO_KEY}}"
+          mkdir ~/.ssh
+          echo > ~/.ssh/known_hosts
+          ssh-keyscan 68.183.171.182 > ~/.ssh/known_hosts
+          cd backend
+          scp -r ./dist "$SERVER":"$REMOTE_DIR"/backend/dist
       # - name: Install dependencies on the backend
       #   run: |
       #     ssh "$SERVER" \
