--- a/.github/workflows/backend-staging-deploy.yml
+++ b/.github/workflows/backend-staging-deploy.yml
@@ -6,7 +6,7 @@ on:
     branches:
       - staging_back
 jobs:
-  front_build:
+  back_build:
     runs-on: ubuntu-latest
     env:
       SERVER: fid@68.183.171.182
@@ -44,11 +44,21 @@ jobs:
           ssh-add - <<< "${{secrets.DO_KEY}}"
           cd backend
           scp -r ./dist "$SERVER":"$REMOTE_DIR"/backend/dist
-      # - name: Install dependencies on the backend
-      #   run: |
-      #     ssh "$SERVER" \
-      #     "cd "$REMOTE_DIR"/backend && \
-      #     npm install --only=production"
+      - name: Install production dependencies
+        run: |
+          cd backend
+          npm install --only=production
+      - name: Deleting bcrypt
+        run: |
+          cd backend
+          yes | rm -r node_modules/bcrypt
+          yes | rm -r node_modules/bcrypt-pbkdf
+      - name: Sending dependencies to the server
+        run: |
+          eval `ssh-agent`
+          ssh-add - <<< "${{secrets.DO_KEY}}"
+          cd backend
+          scp -r ./node_modules "$SERVER":"$REMOTE_DIR"/backend/dist/node_modules
       # - name: Run DB migrations
       #   run: |
       #     ssh "$SERVER" \
