- Adding the env value for API_URL on the frontend package.json for staging builds and release builds

--- a/.github/workflows/frontend-staging-deploy.yml
+++ b/.github/workflows/frontend-staging-deploy.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Build
         run: |
           cd frontend
-          npm run build
+          npm run build-staging
       - name: Sending build via ssh + scp
         run: |
           eval `ssh-agent`
