--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,14 @@
   "author": "Ramses <ramses@cuatromedios.com>",
   "private": true,
   "scripts": {
-    "dev": "quasar dev",
+    "dev": "API_URL=http://127.0.0.1:3000/api quasar dev",
+    "dev-staging": "API_URL=http://api.dd-staging.wizardforyou.com/api quasar dev",
+    "dev-production": "API_URL=https://api.dd.wizardforyou.com/api quasar dev",
     "lint": "eslint --ext .js,.vue src",
     "test": "echo \"No test specified\" && exit 0",
-    "build": "quasar build"
+    "build": "quasar build",
+    "build-production": "API_URL=https://api.dd.wizardforyou.com/api quasar build",
+    "build-staging": "API_URL=http://api.dd-staging.wizardforyou.com/api quasar build"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
