--- a/.github/workflows/frontend-release-deploy.yml
+++ b/.github/workflows/frontend-release-deploy.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Build
         run: |
           cd frontend
-          npm run build
+          npm run build-production
       - name: Sending build via ssh + scp
         run: |
           eval `ssh-agent`
