--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,10 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^6.1.2"
+    "eslint-plugin-vue": "^6.1.2",
+    "quasar-app-extension-api-wrapper": "0.0.11",
+    "quasar-app-extension-nequ-components": "^0.6.2",
+    "quasar-app-extension-vuelidate-rules": "^0.2.0"
   },
   "browserslist": [
     "ie >= 11",
