--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backend",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "",
   "author": "Roberto Langarica <roberto@wizardforyou.com>",
   "repository": "https://github.com/RobertoLangarica/dynamic-documents.git",
@@ -24,7 +24,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "cd ./test && jest --config ./jest-e2e.json --silent=false && cd ..",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config database/cli-config.ts",
     "migration:run": "npm run typeorm migration:run",
     "migration:create": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config database/cli-config.ts migration:create -n ",
@@ -59,18 +59,19 @@
     "@nestjs/schematics": "^6.7.0",
     "@nestjs/testing": "^6.7.1",
     "@types/express": "^4.17.1",
-    "@types/jest": "^24.0.18",
+    "@types/jest": "^26.0.0",
     "@types/node": "^12.7.5",
     "@types/supertest": "^2.0.8",
-    "jest": "^24.9.0",
+    "jest": "^26.0.0",
     "prettier": "^1.18.2",
     "supertest": "^4.0.2",
-    "ts-jest": "^24.1.0",
+    "ts-jest": "^26.0.0",
     "ts-loader": "^6.1.1",
     "ts-node": "^8.4.1",
     "tsconfig-paths": "^3.9.0",
     "tslint": "^5.20.0",
-    "typescript": "^3.6.3"
+    "typescript": "^3.8",
+    "uuid": "^8.2.0"
   },
   "jest": {
     "moduleFileExtensions": [
