--- a/.github/workflows/backend-staging-deploy.yml
+++ b/.github/workflows/backend-staging-deploy.yml
@@ -6,7 +6,40 @@ on:
     branches:
       - staging_back
 jobs:
+  back_test:
+    # Containers must run in Linux based operating systems
+    runs-on: ubuntu-latest
+
+    # Docker Hub image that `container-job` executes in
+    container: node:12.18.3
+    
+    # Service containers to run with `container-job`
+    services:
+      postgres:
+        image: postgres:11.8
+        env:
+          POSTGRES_PASSWORD: admin
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    steps:
+      - name: Checkout last version
+        uses: actions/checkout@v2
+      
+        # Performs a clean installation of all dependencies in the `package.json` file
+      # For more information, see https://docs.npmjs.com/cli/ci.html
+      - name: Install dependencies
+        run: npm ci
+      - name: Connect to PostgresSQL
+        run: pwd
+      - run: cat ./test/.env | grep 
+      - run: ls
+      - run: exit 1
   back_build:
+    needs: back_test
     runs-on: ubuntu-latest
     env:
       SERVER: fid@68.183.171.182
