--- a/backend/package.json
+++ b/backend/package.json
@@ -52,7 +52,8 @@
     "rxjs": "^6.5.3",
     "sha256": "^0.2.0",
     "swagger-ui-express": "^4.1.3",
-    "typeorm": "^0.2.22"
+    "typeorm": "^0.2.22",
+    "uuid": "^8.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.14.2",
