--- a/backend/test/.env
+++ b/backend/test/.env
@@ -1,6 +1,6 @@
 # Database credentials for the application
 DB_HOST=localhost
 DB_PORT=5432
-DB_DATABASE=dd_test
+DB_DATABASE=postgres
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
