--- a/.github/workflows/backend-staging-deploy.yml
+++ b/.github/workflows/backend-staging-deploy.yml
@@ -36,6 +36,9 @@ jobs:
         run: npm ci
       - name: Create test database
         working-directory: ./backend/test
+        run: ls
+      - name: Create test database
+        working-directory: ./backend/test
         run: ./init_test_db.sh
       - name: Run tests
         working-directory: ./backend
