--- a/.github/workflows/backend-staging-deploy.yml
+++ b/.github/workflows/backend-staging-deploy.yml
@@ -37,9 +37,11 @@ jobs:
       - name: Create test database
         working-directory: ./backend/test
         run: ./init_test_db.sh
+
       - name: Run tests
         working-directory: ./backend
         run: npm run test:e2e
+
   back_build:
     needs: back_test
     runs-on: ubuntu-latest
@@ -49,17 +51,18 @@ jobs:
       BRANCH: staging_back
       PROCESS_NAME: DD_staging
     steps:
-      - uses: actions/checkout@v2
-      - name: Getting latest version
-        run: git checkout
-      - name: Instalando dependencias
-        run: |
-          cd backend
-          npm install
+      - name: Checkout last version
+        uses: actions/checkout@v2
+      
+      # Performs a clean installation of all dependencies in the `package.json` file
+      # For more information, see https://docs.npmjs.com/cli/ci.html
+      - name: Install dependencies
+        working-directory: ./backend
+        run: npm ci
       - name: Build
-        run: |
-          cd backend
-          npm run build
+        working-directory: ./backend
+        run: npm run build
+
       - name: Adding SSH basics
         run: |
           eval `ssh-agent`
@@ -67,20 +70,22 @@ jobs:
           mkdir ~/.ssh
           echo > ~/.ssh/known_hosts
           ssh-keyscan 68.183.171.182 > ~/.ssh/known_hosts
-      - name: Deleting last build on the server
+
+      - name: Deleting last build on the remote server
         run: |
           eval `ssh-agent`
           ssh-add - <<< "${{secrets.DO_KEY}}"
           ssh "$SERVER" \
           "cd "$REMOTE_DIR"/backend && \
           yes | rm -r dist"
-      - name: Sending new build to the server
+      - name: Sending new build to the remote server
+        working-directory: ./backend
         run: |
           eval `ssh-agent`
           ssh-add - <<< "${{secrets.DO_KEY}}"
-          cd backend
           scp -r ./dist "$SERVER":"$REMOTE_DIR"/backend/dist
-      - name: Getting last repo version on the server
+
+      - name: Getting last repo version on the remote server
         run: |
           eval `ssh-agent`
           ssh-add - <<< "${{secrets.DO_KEY}}"
@@ -88,18 +93,21 @@ jobs:
           "cd "$REMOTE_DIR" && \
           git fetch && \
           git checkout origin/"$BRANCH""
-      - name: Installing dependencies
+
+      - name: Installing dependencies on remote server
         run: |
           eval `ssh-agent`
           ssh-add - <<< "${{secrets.DO_KEY}}"
           ssh "$SERVER" \
-          "cd "$REMOTE_DIR"/backend && npm install"
+          "cd "$REMOTE_DIR"/backend && npm ci"
+
       - name: Run DB migrations
         run: |
           eval `ssh-agent`
           ssh-add - <<< "${{secrets.DO_KEY}}"
           ssh "$SERVER" \
           "cd "$REMOTE_DIR"/backend && npm run migration:run"
+          
       - name: Restart pm2
         run: |
           eval `ssh-agent`
