- Adding --tanspile-only to typeorm command for better performance - Splitting the dependency installation in the backend deployment workflow, it is now divided in production and development. This trying to avoid npm getting killed by lack of memory

--- a/.github/workflows/backend-release-deploy.yml
+++ b/.github/workflows/backend-release-deploy.yml
@@ -95,12 +95,19 @@ jobs:
           git fetch && \
           git checkout origin/"$BRANCH""
 
-      - name: Installing dependencies on remote server
+      - name: Installing production dependencies on remote server
         run: |
           eval `ssh-agent`
           ssh-add - <<< "${{secrets.DO_KEY}}"
           ssh "$SERVER" \
-          "cd "$REMOTE_DIR"/backend && npm ci"
+          "cd "$REMOTE_DIR"/backend && npm install --production"
+          
+      - name: Installing development dependencies on remote server
+        run: |
+          eval `ssh-agent`
+          ssh-add - <<< "${{secrets.DO_KEY}}"
+          ssh "$SERVER" \
+          "cd "$REMOTE_DIR"/backend && npm install --dev"
 
       - name: Run DB migrations
         run: |
