Installed vuelidate-rules and nequ-components extensions, compatible with quasar/app 2.0

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,9 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.1.2",
-    "quasar-app-extension-api-wrapper": "0.0.11"
+    "quasar-app-extension-api-wrapper": "0.0.11",
+    "quasar-app-extension-nequ-components": "^0.7.0",
+    "quasar-app-extension-vuelidate-rules": "^0.3.1"
   },
   "browserslist": [
     "ie >= 11",
