--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,7 @@
     "test:e2e": "cd ./test && jest --config ./jest-e2e.json --silent=false && cd ..",
     "typeorm": "ts-node --transpile-only -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config database/cli-config.ts",
     "migration:run": "npm run typeorm migration:run",
-    "migration:create": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config database/cli-config.ts migration:create -n ",
+    "migration:create": "npm run typeorm migration:create -n ",
     "migration:revert": "npm run typeorm migration:revert",
     "migration:refresh": "npm run typeorm schema:drop && npm run migration:run",
     "migration:generate": "npm run typeorm -- migration:generate -n ",
