--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -11,5 +11,12 @@
     "baseUrl": "./",
     "incremental": true
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "test",
+    "**/*.spec.ts",
+    "**/*.test.ts",
+    "**/*.e2e-spec.ts"
+  ]
 }
