--- a/.github/workflows/backend-staging-deploy.yml
+++ b/.github/workflows/backend-staging-deploy.yml
@@ -78,6 +78,7 @@ jobs:
           ssh "$SERVER" \
           "cd "$REMOTE_DIR"/backend && \
           yes | rm -r dist"
+
       - name: Sending new build to the remote server
         working-directory: ./backend
         run: |
@@ -85,12 +86,14 @@ jobs:
           ssh-add - <<< "${{secrets.DO_KEY}}"
           scp -r ./dist "$SERVER":"$REMOTE_DIR"/backend/dist
 
+      # Checking out the working branch after a hard reset to dismiss any local change prompt for overwriting
       - name: Getting last repo version on the remote server
         run: |
           eval `ssh-agent`
           ssh-add - <<< "${{secrets.DO_KEY}}"
           ssh "$SERVER" \
           "cd "$REMOTE_DIR" && \
+          git reset --hard && \
           git fetch && \
           git checkout origin/"$BRANCH""
 
